# calendaryo

./: .gitignore  .travis.yml  README.md  calendaryo.py  google-api-auth.json.enc  local.env  pyproject.toml
.github/workflows/: build.yml  python-publish.yml
conferencias/python-brazil-2019/: grade.toml  keynotes.toml  lightning_talks.toml  meals.toml  talks_oct_25.toml  talks_oct_25_description.toml  talks_oct_26.toml  talks_oct_27.toml  tutorials_oct_23.toml  tutorials_oct_24.toml  tutotials_oct_23.toml
conferencias/python-brazil-2020/: keynotes.toml  mesa-redonda.toml  palestras.toml  sprints.toml  tutoriais.toml
conferencias/python-brazil-2021/: jobfair.toml  keynotes.toml  palestras.toml  relampagos.toml  sprint.toml  tutoriais.toml
