[tool.poetry]
name = "calendaryo"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <marco@rougeth.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
google-api-python-client = "^1.7"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.0"
python-decouple = "^3.1"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
ipdb = "^0.12.2"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
